--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,13 @@
     }
   ],
   "require": {
-    "php" : "^7.0",
+    "php" : "^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.0"
+    "phpunit/phpunit": "6.0",
+    "squizlabs/php_codesniffer": "3.0.0RC3",
+    "phpmd/phpmd": "2.6.0",
+    "sebastian/phpcpd": "3.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -35,10 +38,14 @@
       "@cpd-check",
       "@test"
     ],
-    "cs-check": "phpcs --colors",
-    "md-check": "phpmd ./src text phpmd.xml",
-    "cpd-check": "phpcpd ./src",
-    "cs-fix": "phpcbf --colors",
-    "test": "phpunit --colors=always"
+    "cs-check": "./vendor/bin/phpcs --colors",
+    "md-check": "./vendor/bin/phpmd ./src text phpmd.xml",
+    "cpd-check": "./vendor/bin/phpcpd ./src",
+    "cs-fix": "./vendor/bin/phpcbf --colors",
+    "test": "./vendor/bin/phpunit --colors=always"
+  },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true
   }
 }
